@@ -6,6 +6,9 @@ Revision history for Perl extension Module::Build.
    use version.pm to delcare their versions (e.g. "our $VERSION =
    version->new('1.0.0')"). [John Peacock and Ron Savage]
 
+ - We now create a Build.bat script on versions of Windows where it
+   makes sense. [Yves]
+
 0.27_07  Wed Feb  1 20:07:45 CST 2006
 
  - The notes() method now returns the new value when called with two
